--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_AUTH0_DOMAIN=dev-u7wkmz1i4463mun8.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=lZCo9hdMh7LgzLxKnd18CzEh2z4CjOiO
 REACT_APP_API_URL=https://habits-tracker-8jkw.onrender.com/habits
 REACT_APP_AUTH0_AUDIENCE=https://my-habit-tracker-api
-REACT_APP_AUTH0_REDIRECT_URI=https://habits-tracker-8jkw.onrender.com/callback
+REACT_APP_AUTH0_REDIRECT_URI=https://habits-tracker-app.netlify.app/callback
